@@ -754,6 +754,7 @@ static void	expand_trigger_description_constants(
 #define MVAR_HOST_NAME			"{HOSTNAME}"
 #define MVAR_IPADDRESS			"{IPADDRESS}"
 #define MVAR_TIME			"{TIME}"
+#define MVAR_ITEM_LASTVALUE		"{ITEM.LASTVALUE}"
 #define MVAR_ITEM_NAME			"{ITEM.NAME}"
 #define MVAR_TRIGGER_COMMENT		"{TRIGGER.COMMENT}"
 #define MVAR_TRIGGER_ID			"{TRIGGER.ID}"
@@ -1171,7 +1172,33 @@ zabbix_log(LOG_LEVEL_DEBUG, "str_out1 [%s] pl [%s]", str_out, pl);
 
 				replace_to = zbx_dsprintf(replace_to, "%s",
 					STR_UNKNOWN_VARIABLE);
-zabbix_log( LOG_LEVEL_WARNING, "ALEX");
+			}
+			else
+			{
+				replace_to = zbx_dsprintf(replace_to, "%s",
+					row[0]);
+			}
+
+			DBfree_result(result);
+		}
+		else if(macro_type & (MACRO_TYPE_MESSAGE_SUBJECT | MACRO_TYPE_MESSAGE_BODY | MACRO_TYPE_TRIGGER_DESCRIPTION) &&
+			strncmp(pr, MVAR_ITEM_LASTVALUE, strlen(MVAR_ITEM_LASTVALUE)) == 0)
+		{
+			var_len = strlen(MVAR_ITEM_LASTVALUE);
+
+			result = DBselect("select distinct i.lastvalue from triggers t, functions f,items i, hosts h"
+				" where t.triggerid=" ZBX_FS_UI64 " and f.triggerid=t.triggerid and f.itemid=i.itemid and h.hostid=i.hostid",
+				event->objectid);
+
+			row=DBfetch(result);
+
+			if(!row || DBis_null(row[0])==SUCCEED)
+			{
+				zabbix_log( LOG_LEVEL_DEBUG, "No ITEM.LASTVALUE in substitute_simple_macros. Triggerid [" ZBX_FS_UI64 "]",
+					event->objectid);
+
+				replace_to = zbx_dsprintf(replace_to, "%s",
+					STR_UNKNOWN_VARIABLE);
 			}
 			else
 			{
